parallelized multi model prediction

--- a/parallel/sklearn_parallel.ipynb
+++ b/parallel/sklearn_parallel.ipynb
@@ -663,117 +663,168 @@
    "id": "c60a2443-1715-4d3a-9c51-aab9ab41981a",
    "metadata": {},
    "source": [
-    "## Multi-Model Prediction"
+    "## Parallelize Model Predictions - Multiple Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2f2875e1-37f2-4273-934f-708a39d14c6e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "models = [gen_mdl, lang_mdl]\n",
+    "features = [genre_features, lang_features]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "548b5154-711c-4900-bfd7-04d5db199623",
+   "metadata": {},
+   "source": [
+    "### Predict Normally"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "6647663e-d216-43b9-ac83-ab9eb2b4d963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multi_predcit(data, models, features = features, pred_col = 'prediction_{}'):\n",
+    "    '''\n",
+    "    This function will outline how to generate predictions associated to multiple\n",
+    "    models when passing in the same dataset.\n",
+    "    \n",
+    "    params:\n",
+    "        data (DataFrame) : The dataframe holding the feature data for the model\n",
+    "        feature_col (String) : List of columns in the dataset necessary\n",
+    "                                        to generate predictions\n",
+    "        models (List) : Key is the target the model is predicting for, values\n",
+    "                        are the associated models.\n",
+    "        pred_col (String): The name of the column you want storing the results\n",
+    "        \n",
+    "    returns:\n",
+    "        This function will return the input dataframe with additional columns \n",
+    "        corresponding to the predictions generated from all the models passed.\n",
+    "        \n",
+    "    example:\n",
+    "        multi_predcit(\n",
+    "            data = res,\n",
+    "            feature_col = 'stopwordless_content',\n",
+    "            models = models,\n",
+    "            pred_col = 'prediction_{}'\n",
+    "        )\n",
+    "    '''\n",
+    "\n",
+    "    for i, (ft_cols, mdl) in enumerate(zip(features, models)):\n",
+    "        ft = data[ft_cols].values\n",
+    "        res = mdl.predict(ft)\n",
+    "        data[pred_col.format(i)] = res\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "50b31e3d-a480-48fb-bb84-23970f4ad7d8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.39 s, sys: 301 ms, total: 3.7 s\n",
+      "Wall time: 2.56 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# predict normally\n",
+    "res = multi_predcit(\n",
+    "    data = d,\n",
+    "    features = features,\n",
+    "    models = models,\n",
+    "    pred_col = 'prediction_{}'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca4d07f-d338-44ea-8f40-35ffccb3edfc",
+   "metadata": {},
+   "source": [
+    "### Predict Parallel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f144d6b0-eca2-45a3-8661-421473013074",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parallel_multi(fn, data, models, features, n_cores):\n",
+    "    '''\n",
+    "    This function will parallelize the input function so that a model is allocated to each core and \n",
+    "    predictions are generated in parallel. \n",
+    "    \n",
+    "    params:\n",
+    "        fn (Function) : The function you want to parallelize\n",
+    "        data (DataFrame) : The dataset holding the features\n",
+    "        feature_col (String) : The column corresponding to the article content\n",
+    "        models (List) : The list of models \n",
+    "        pred_col (String) : The name of the column you want to store the results in\n",
+    "        n_cores (Integer) : The number of cores you want to parallelize with\n",
+    "        \n",
+    "    returns:\n",
+    "        This function will return the input dataframe with additional columns, 1 \n",
+    "        corresponding to each of the models\n",
+    "        \n",
+    "    example: \n",
+    "        parallel_multi(\n",
+    "            fn = multi_predcit,\n",
+    "            data = res,\n",
+    "            models = models_list,\n",
+    "            features = features,\n",
+    "            n_cores = 2\n",
+    "        )\n",
+    "    '''\n",
+    "    \n",
+    "    mdl_split = np.array_split(models, n_cores)\n",
+    "    pool = Pool(n_cores)\n",
+    "    res = pool.map(partial(fn, data, features), mdl_split)\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "    return res"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32b8d09-3a0d-4719-8980-3b9627d9b53e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "51599d62-cd6f-4e31-a6ba-deb6d3038e3c",
+   "id": "248a9060-15cc-463c-8f70-14a9e314d0b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fib(n):\n",
-    "    '''\n",
-    "    recursive\n",
-    "    '''\n",
-    "    if n == 0:\n",
-    "        return 0\n",
-    "    elif n == 1 or n == 2:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        f = fib(n-1) + fib(n-2)\n",
-    "    return f"
+    "%%time\n",
+    "# predict parallel\n",
+    "res = parallel_multi(\n",
+    "    fn = multi_predcit,\n",
+    "    data = d,\n",
+    "    models = models,\n",
+    "    features = features,\n",
+    "    n_cores = 2\n",
+    ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2ed37876-f737-4391-a5c3-3e992c54abb2",
+   "cell_type": "markdown",
+   "id": "ebe740d1-cbb3-4530-a402-dd0605b391d0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "fib(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "5a79e149-348d-4098-b5c0-8a3dff867899",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory = {}\n",
-    "def fib(n):\n",
-    "    '''\n",
-    "    dynamic - recursive\n",
-    "    '''\n",
-    "    if n in memory:\n",
-    "        return memory[n]\n",
-    "    elif n == 0:\n",
-    "        return 0\n",
-    "    elif n == 1 or n == 2:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        f = fib(n-1) + fib(n-2)\n",
-    "    memory[n] = f\n",
-    "    return f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "cd1c51fb-47a2-4350-abef-4ac9c88a93fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1779979416004714189"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fib(89)"
+    "---"
    ]
   }
  ],
